--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "linked_stack.h": "c",
         "stdlib.h": "c",
         "string.h": "c"
-    }
+    },
+    "cmake.ignoreCMakeListsMissing": true
 }
